@@ -52,13 +52,13 @@ static bool
 var_in_try_or_loop(const var_expr*, const expr*, bool, bool, bool&);
 
 static bool 
-is_subseq_pred(
-    RewriterContext&,
+is_positional_pred(
     const flwor_expr*,
-    csize whereClausePos,
+    csize,
     const expr*,
     var_expr*&,
-    expr*&);
+    expr*&,
+    CompareConsts::CompareType&);
 
 
 #define MODIFY( expr ) do { modified = true; expr; } while (0)
@@ -1301,6 +1301,8 @@ RULE_REWRITE_PRE(RefactorPredFLWOR)
   bool modified = false;
   flwor_expr* flwor = static_cast<flwor_expr*>(node);
 
+  static_context* sctx = flwor->get_sctx();
+
   // "for $x in ... return if (ce) then te else ()" -->
   // "for $x in ... where ce return te"
   if (flwor->get_return_expr()->get_expr_kind() == if_expr_kind)
@@ -1352,7 +1354,7 @@ RULE_REWRITE_PRE(RefactorPredFLWOR)
         else
         {
           expr* newWhereExpr = rCtx.theEM->
-          create_fo_expr(whereExpr->get_sctx(),
+          create_fo_expr(sctx,
                          whereExpr->get_loc(),
                          GET_BUILTIN_FUNCTION(OP_AND_N),
                          whereExpr,
@@ -1393,19 +1395,80 @@ RULE_REWRITE_PRE(RefactorPredFLWOR)
 
       expr* posExpr = NULL;
       var_expr* posVar = NULL;
+      CompareConsts::CompareType compKind;
 
-      if (is_subseq_pred(rCtx, flwor, clausePos, whereExpr, posVar, posExpr) &&
+      if (is_positional_pred(flwor, clausePos, whereExpr, posVar, posExpr, compKind) &&
           expr_tools::count_variable_uses(flwor, posVar, 2) <= 1)
       {
         for_clause* forClause = posVar->get_for_clause();
         expr* domainExpr = forClause->get_expr();
 
-        fo_expr* result = rCtx.theEM->
-        create_fo_expr(whereExpr->get_sctx(),
-                       domainExpr->get_loc(),
-                       GET_BUILTIN_FUNCTION(OP_ZORBA_SEQUENCE_POINT_ACCESS_2),
-                       domainExpr,
-                       posExpr);
+        fo_expr* result;
+
+        switch (compKind)
+        {
+        case CompareConsts::GENERAL_EQUAL:
+        case CompareConsts::VALUE_EQUAL:
+        {
+          result = rCtx.theEM->
+          create_fo_expr(sctx,
+                         domainExpr->get_loc(),
+                         GET_BUILTIN_FUNCTION(OP_ZORBA_SEQUENCE_POINT_ACCESS_2),
+                         domainExpr,
+                         posExpr);
+          break;
+        }
+        case CompareConsts::GENERAL_LESS_EQUAL:
+        case CompareConsts::VALUE_LESS_EQUAL:
+        {
+          expr* oneExpr = rCtx.theEM->
+          create_const_expr(sctx, domainExpr->get_loc(), xs_integer(1));
+
+          std::vector<expr*> args(3);
+          args[0] = domainExpr;
+          args[1] = oneExpr;
+          args[2] = posExpr;
+
+          result = rCtx.theEM->
+          create_fo_expr(sctx,
+                         domainExpr->get_loc(),
+                         GET_BUILTIN_FUNCTION(OP_ZORBA_SUBSEQUENCE_INT_3),
+                         args);
+          break;
+        }
+        case CompareConsts::GENERAL_LESS:
+        case CompareConsts::VALUE_LESS:
+        {
+          expr* oneExpr1 = rCtx.theEM->
+          create_const_expr(sctx, domainExpr->get_loc(), xs_integer(1));
+
+          expr* oneExpr2 = rCtx.theEM->
+          create_const_expr(sctx, domainExpr->get_loc(), xs_integer(1));
+
+          posExpr = rCtx.theEM->
+          create_fo_expr(sctx,
+                         domainExpr->get_loc(),
+                         GET_BUILTIN_FUNCTION(OP_NUMERIC_SUBTRACT_INTEGER_2),
+                         posExpr,
+                         oneExpr2);
+
+          std::vector<expr*> args(3);
+          args[0] = domainExpr;
+          args[1] = oneExpr1;
+          args[2] = posExpr;
+
+          result = rCtx.theEM->
+          create_fo_expr(sctx,
+                         domainExpr->get_loc(),
+                         GET_BUILTIN_FUNCTION(OP_ZORBA_SUBSEQUENCE_INT_3),
+                         args);
+          break;
+        }
+        default:
+        {
+          ZORBA_ASSERT(false);
+        }
+        }
 
         expr_tools::fix_annotations(result);
 
@@ -1450,13 +1513,13 @@ RULE_REWRITE_POST(RefactorPredFLWOR)
   TODO: (b2) can be relaxed somewhat: it is ok if all the sequential clauses
         are before the clause that defines the pos var.
 ******************************************************************************/
-static bool is_subseq_pred(
-    RewriterContext& rCtx,
+static bool is_positional_pred(
     const flwor_expr* flworExpr,
     const csize whereClausePos,
     const expr* predExpr,
     var_expr*& posVar,
-    expr*& posExpr)
+    expr*& posExpr,
+    CompareConsts::CompareType& compKind)
 {
   static_context* sctx = predExpr->get_sctx();
   TypeManager* tm = sctx->get_typemanager();
@@ -1482,9 +1545,10 @@ static bool is_subseq_pred(
     break;
   }
 
-  if (f->comparisonKind() != CompareConsts::GENERAL_EQUAL &&
-      f->comparisonKind() != CompareConsts::VALUE_EQUAL)
+  if (!f->isComparisonFunction())
     return false;
+
+  compKind = f->comparisonKind();
 
   for (csize i = 0; i < 2; ++i)
   {
@@ -1493,6 +1557,59 @@ static bool is_subseq_pred(
 
     if (posVar == NULL || posVar->get_kind() != var_expr::pos_var)
       continue;
+
+    bool eq = false;
+
+    switch (compKind)
+    {
+    case CompareConsts::GENERAL_EQUAL:
+    case CompareConsts::VALUE_EQUAL:
+    {
+      eq = true;
+      break;
+    }
+    case CompareConsts::VALUE_LESS:
+    case CompareConsts::VALUE_LESS_EQUAL:
+    case CompareConsts::GENERAL_LESS:
+    case CompareConsts::GENERAL_LESS_EQUAL:
+    {
+      if (i == 1)
+        return false;
+
+      break;
+    }
+    case CompareConsts::VALUE_GREATER:
+    case CompareConsts::VALUE_GREATER_EQUAL:
+    case CompareConsts::GENERAL_GREATER:
+    case CompareConsts::GENERAL_GREATER_EQUAL:
+    {
+      if (i == 0)
+        return false;
+
+      switch (compKind)
+      {
+      case CompareConsts::VALUE_GREATER:
+        compKind = CompareConsts::VALUE_LESS;
+        break;
+      case CompareConsts::VALUE_GREATER_EQUAL:
+        compKind = CompareConsts::VALUE_LESS_EQUAL;
+        break;
+      case CompareConsts::GENERAL_GREATER:
+        compKind = CompareConsts::GENERAL_LESS;
+        break;
+      case CompareConsts::GENERAL_GREATER_EQUAL:
+        compKind = CompareConsts::GENERAL_LESS_EQUAL;
+        break;
+      default:
+        ZORBA_ASSERT(false);
+      }
+      break;
+    }
+    default:
+    {
+      return false;
+    }
+    }
 
     for_clause* forClause = posVar->get_for_clause();
 
@@ -1507,7 +1624,7 @@ static bool is_subseq_pred(
       checkClause = flworExpr->get_clause(checkClausePos);
 
       if (checkClause->get_kind() == flwor_clause::group_clause ||
-          checkClause->get_kind() == flwor_clause::count_clause)
+          (checkClause->get_kind() == flwor_clause::count_clause && eq))
         return false;
 
       --checkClausePos;
